--- a/BarBot/BarBot.UWP/Styles/ProgressRingStyles.xaml
+++ b/BarBot/BarBot.UWP/Styles/ProgressRingStyles.xaml
@@ -3,21 +3,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BarBot.UWP.Styles">
 
-    <Style x:Key="ProgressRingStyle"
-           TargetType="ProgressRing">
-        <Setter Property="IsActive"
-                Value="True" />
-        <Setter Property="Visibility"
-                Value="Visible" />
-        <Setter Property="Foreground"
-                Value="White" />
-        <Setter Property="Height"
-                Value="100" />
-        <Setter Property="Width"
-                Value="100" />
-        <Setter Property="HorizontalAlignment"
-                Value="Center" />
-        <Setter Property="VerticalAlignment"
-                Value="Center" />
+    <Style x:Key="ProgressRingStyle" TargetType="ProgressRing">
+        <Setter Property="IsActive" Value="True" />
+        <Setter Property="Visibility" Value="Visible" />
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="Height" Value="100" />
+        <Setter Property="Width" Value="100" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
 </ResourceDictionary>
